<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/global_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/play_song_comment" />

    <TextView
        android:id="@+id/play_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_margin"
        android:gravity="center"
        android:padding="@dimen/global_padding"
        android:text="@string/song_name"
        android:textSize="@dimen/text_size_trackName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/track_timeline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:src="@drawable/ic_play_arrow_black_48dp" />

        <ImageView
            android:id="@+id/ic_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_right_margin"
            android:src="@drawable/ic_pause_black_48dp" />

        <ImageView
            android:id="@+id/ic_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_stop_black_48dp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>
</LinearLayout>
